# opus-magnum-leaderboard

./: .dockerignore  .gitignore  .gitmodules  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  build-docker.sh  load-docker.sh  start-docker.sh  start.sh
.github/workflows/: build-client.yml
client/: Cargo.toml
client/src/: config.rs  main.rs  parser.rs  uploader.rs  watcher.rs
server/: .env.example  db.py  main.py  parser.py  pyproject.toml  scorer.py
server/static/: index.html
